--- a/style.css
+++ b/style.css
@@ -30,7 +30,29 @@ body {
     text-align: left;
     width: 100%;                /* fill up the entire div */
 }
- 
+.html-mobile-background {
+    position: fixed;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 125%; /* To compensate for mobile browser address bar space */
+    background: url(/images/bg.jpg) no-repeat; 
+    background-size: 100% 100%;
+}
+
+@media (min-width: 600px) {
+    html {
+        background: url(/images/bg.jpg) no-repeat center center fixed; 
+        background-size: cover;
+    }
+    .html-mobile-background {
+        display: none;
+    }
+} 
+
+
+
 #menu {
     float: left;
 	
@@ -80,7 +102,7 @@ th {
 }
  
 td {
-    padding: 5px;
+    padding: 1px;
 }
  
 /* Begin font styles */
